--- a/fitcheck/android/app/src/main/AndroidManifest.xml
+++ b/fitcheck/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="fitcheck"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:name="${FITCHECK}"
+        android:icon="images/fiticon.png">
         <activity
             android:name=".MainActivity"
             android:exported="true"
